cabal-version:      3.4
name:               mermaid
version:            0.1.0.0
synopsis:           Mermaid, diagramming and charting tool
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Mermaid, Mermaid.Diagram.EntityRelationship
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.18.1.0 && < 5, text, megaparsec, prettyprinter, mtl
    hs-source-dirs:   src
    default-language: GHC2021

test-suite mermaid-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        mermaid,
        text
